[gd_scene load_steps=15 format=2]

[ext_resource path="res://Art/Ships/Ship4/Ship4.png" type="Texture" id=1]
[ext_resource path="res://Art/Races/Race3/Race3.png" type="Texture" id=2]
[ext_resource path="res://Art/Races/Race1/Race1.png" type="Texture" id=3]
[ext_resource path="res://Art/Races/Race2/Race2.png" type="Texture" id=4]
[ext_resource path="res://Art/Races/Race4/Race4.png" type="Texture" id=5]
[ext_resource path="res://Art/Ships/Ship2/Ship2.png" type="Texture" id=6]
[ext_resource path="res://Art/Ships/Ship3/Ship3.png" type="Texture" id=7]
[ext_resource path="res://Art/Ships/Ship1/Ship1.png" type="Texture" id=8]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=9]
[ext_resource path="res://Art/Ships/Ship7/Ship7.png" type="Texture" id=10]
[ext_resource path="res://Art/Ships/Ship5/Ship5.png" type="Texture" id=11]
[ext_resource path="res://Art/Races/Race5/Race5.png" type="Texture" id=12]
[ext_resource path="res://Art/Races/Race6/Race6.png" type="Texture" id=13]
[ext_resource path="res://Space.png" type="Texture" id=14]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Space" type="Sprite" parent="."]
texture = ExtResource( 14 )
centered = false

[node name="Start" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -76.0
margin_right = -27.0
margin_bottom = -56.0
shortcut_in_tooltip = false
text = "START"

[node name="Quit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -40.0
margin_right = -27.0
margin_bottom = -20.0
shortcut_in_tooltip = false
text = "QUIT"

[node name="Race1" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = -41.0
margin_right = 79.0
margin_bottom = -15.0
shortcut_in_tooltip = false
icon = ExtResource( 3 )
align = 0

[node name="Ship1" type="Sprite" parent="Race1"]
position = Vector2( 39, 13 )
texture = ExtResource( 8 )

[node name="Race2" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 84.0
margin_top = -41.0
margin_right = 139.0
margin_bottom = -15.0
shortcut_in_tooltip = false
icon = ExtResource( 4 )

[node name="Ship2" type="Sprite" parent="Race2"]
position = Vector2( 41, 13 )
texture = ExtResource( 6 )

[node name="Race3" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 143.0
margin_top = -41.0
margin_right = 198.0
margin_bottom = -15.0
shortcut_in_tooltip = false
icon = ExtResource( 2 )

[node name="Ship3" type="Sprite" parent="Race3"]
position = Vector2( 41, 13 )
texture = ExtResource( 7 )

[node name="Race4" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 203.0
margin_top = -41.0
margin_right = 257.0
margin_bottom = -15.0
shortcut_in_tooltip = false
icon = ExtResource( 5 )

[node name="Ship4" type="Sprite" parent="Race4"]
position = Vector2( 39, 13 )
texture = ExtResource( 1 )

[node name="Race5" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 262.0
margin_top = -41.0
margin_right = 315.0
margin_bottom = -15.0
shortcut_in_tooltip = false
icon = ExtResource( 12 )

[node name="Ship5" type="Sprite" parent="Race5"]
position = Vector2( 41, 13 )
texture = ExtResource( 11 )

[node name="Race6" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 320.0
margin_top = -41.0
margin_right = 372.0
margin_bottom = -15.0
shortcut_in_tooltip = false
icon = ExtResource( 13 )

[node name="Ship7" type="Sprite" parent="Race6"]
position = Vector2( 39, 12 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 32.0
text = "SELECT A RACE"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 104.0
margin_right = 210.0
margin_bottom = 194.0
text = "Controller:
	A = Select
	Y = Change Weapon
	Left Stick = Move
	Right Stick = Aim + Shoot
	Start = Pause Menu"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Race1" to="." method="_on_Race1_pressed"]
[connection signal="pressed" from="Race2" to="." method="_on_Race2_pressed"]
[connection signal="pressed" from="Race3" to="." method="_on_Race3_pressed"]
[connection signal="pressed" from="Race4" to="." method="_on_Race4_pressed"]
[connection signal="pressed" from="Race5" to="." method="_on_Race5_pressed"]
[connection signal="pressed" from="Race6" to="." method="_on_Race6_pressed"]
